# otf-engine

./: CMakeLists.txt  pyproject.toml
examples/: evaluator.py
src/mtp_otf/: __init__.py  __main__.py  almtp_io.py  create_otf_state.py  cycles.py  io_cfg.py  launchers.py  maxvol.py  mtp_backend.py  otf_mtp.py
src/mtp_otf/_mtp/: _mtp.py  calculator.py  design_matrix.py  io.py  linear_fit.py  nonlinear_fit.py  rescale.py
src/mtp_otf/_mtp/csrc/: file_utils.cpp  mtp_bindings.cpp  mtp_potential.cpp  mtp_potential.h  mtp_radial_basis.h
src/otf_engine/: __main__.py  almtp_io.py  cycles.py  io_cfg.py  launchers.py  mtp_backend.py  otf_mtp.py
src/otf_engine/_mtp/: __init__.py
src/otf_engine/_mtp/csrc/: file_utils.h  mtp_radial_basis.cpp
