[build-system]
requires = ["scikit-build-core>=0.3", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"

[project]
name = "otf_engine"
version = "0.0.1"
authors = [
  { name="Eugène Sanscartier", email="eugene.sanscartier@gmail.com" },
]
description = "On-the-fly active learning engine for machine learning interatomic potentials"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

requires-python = ">=3.10"
dependencies = [
  "ase",
  "numpy",
  "scipy",
]

[project.optional-dependencies]
mpi = ["mpi4py"]

[project.scripts]
create-otf-state = "otf_engine.create_otf_state:main"
otf-engine = "otf_engine.__main__:main"

[project.urls]
Homepage = "https://github.com/esanscartier/otf-engine"
Issues = "https://github.com/esanscartier/otf-engine/issues"
